<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_dark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtWelcomeappname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="179dp"
        android:layout_height="0dp"
        android:layout_marginTop="221dp"
        android:layout_marginBottom="142dp"
        android:src="@drawable/dietlogo"
        app:layout_constraintBottom_toTopOf="@+id/btnWelcomeLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnWelcomeLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="149dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/I_have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnWelcomeRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:background="@android:color/white"
        android:text="@string/create_new_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWelcomeLogin" />


</androidx.constraintlayout.widget.ConstraintLayout>